--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -988,6 +988,15 @@ Next we use a fundamental integral identity:
 \end{equation}
 \begin{exercise} Prove the formula \eqref{eq:correlator-integral-0d}.
 \end{exercise}
+\begin{solution}
+  Probably try the expansion
+  \begin{equation}
+    \begin{split}
+    \int \exp\left(x^2\right)\exp\left(-\frac{m}{2}x^2\right)dx&=\int \sum_{n=0}^{\infty}\frac{x^{2k}}{k!}\exp\left(-\frac{m}{2}x^2\right)\\
+\ldots
+    \end{split}
+  \end{equation}
+\end{solution}
 Using \eqref{eq:correlator-integral-0d} the integrals in \eqref{eq:dubious-exchange} can be done term by term, yielding
 \begin{align} \label{eq:0d-perturbation-series}
   Z(m, \lambda) \, &\text{''=''} \, \sqrt\frac{2\pi}{m} \sum_{n=0}^\infty \left( - \frac{1}{96} \right)^n \frac{(4n)!}{n!(2n)!} \, \tlambda^n, \qquad \tlambda = \frac{\lambda}{m^2}, \\
@@ -1012,6 +1021,7 @@ Given a function $f: \R_+ \to \C$,
 the formal series $\sum_{n=0}^\infty c_n t^n$ is an \ti{asymptotic
 series for $f$ as $t \to 0^+$} if, for all $N \ge 0$,
 \begin{equation}
+\label{assexpan}
  \lim_{t \to 0^+} t^{-N} \left\lvert f(t) - \left( \sum_{n=0}^N c_n t^n \right) \right\rvert = 0. 
 \end{equation}
 In this situation we write $f(t) \sim \sum_{n=0}^\infty c_n t^n$.
@@ -1031,6 +1041,19 @@ is an asymptotic series for $Z(m,\lambda)$ as $\lambda \to 0^+$ for fixed $m$.
 at the level of asymptotic series. This is a very commonly-occurring situation.)
 \end{exercise}
 
+\begin{solution}
+  Assuming that the function $f:\R\to\R$ is $N+1$ times differentiable, we have Taylor's theorem
+  \begin{equation}
+    f(t)= f(a) + f'(a)(t-a)  + \frac{f''(a)}{2!}(t-a)^2 + \ldots + \frac{f^{(N)}(a)}{N!}(t-a)^N + \frac{f^{(N+1)}(\xi_L)}{(N+1)!}(t-a)^{N+1}
+  \end{equation}
+where $\xi_L\in (a,t)$.  Now expanding $f(t)$ about $t=0$ and substituting it in equation \ref{assexpan} we get
+\begin{equation}
+\begin{split}
+  \lim_{t\to 0^+}t^{-N}\left|\frac{f^{(N+1)}(\xi_L)}{(N+1)!}(t-0)^{N+1}\right|=0
+\end{split}
+\end{equation}
+\end{solution}
+
 So the precise meaning of the $\text{''=''}$ in \eqref{eq:dubious-exchange}
 and \eqref{eq:0d-perturbation-series} above is actually $\sim$.
 
@@ -1042,6 +1065,23 @@ expansion means is to do the next exercise:
 \begin{exercise} Make a plot of $Z(m=1,\lambda)$
 and the first few truncations of its asymptotic series around $\lambda \to 0^+$.
 \end{exercise}
+
+\begin{solution}
+  \begin{figure}
+    \label{partifun}
+    \centering
+    \includegraphics[scale=.8]{figures/partifun.pdf}
+    \caption{Plot of $Z$ vs $\lambda$.}
+  \end{figure}
+The figure \ref{partifun} represents the graph of full function.
+\begin{figure}
+  \centering
+  \label{partifun1}
+  \includegraphics[scale=.8]{figures/partifun1.pdf}
+  \caption{Truncated $Z$.}
+\end{figure}
+Figure \ref{partifun1} represents the truncated $Z$.
+\end{solution}
 
 One might wonder whether there could be some \ti{other} series expansion for $Z(m,\lambda)$.
 But this is impossible, as the next exercise shows.
