--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -395,7 +395,7 @@ positive integers by
 \begin{equation}
   b_k(X) = \dim_\R \cH_k(X).
 \end{equation}
-There is a remarkable fact about these integers:
+There is a very remarkable fact about these integers:
 \begin{fact} \label{fact:betti-numbers-are-topological} The integers $b_k$ do not depend on the choice of Riemannian metric or smooth
 structure on $X$; instead they are invariants of the underlying topological manifold
 (the \ti{Betti numbers}).
